Commits foundation/contact.html and fixes title spacing in bootstrap/index.html. Apparently I'm getting tired.

--- a/bootstrap/css/app.css
+++ b/bootstrap/css/app.css
@@ -17,6 +17,7 @@ h6{
   font-family: 'Roboto', sans-serif; 
 }
 #content_container{
+  padding-top:100px;
 }
 .padme{
   padding-top:40px;
